스터디 그룹 목표에 index 반환